draft-ietf-sip-connect-reuse-14

--- a/draft-ietf-sip-connect-reuse-14.html
+++ b/draft-ietf-sip-connect-reuse-14.html
@@ -154,10 +154,10 @@
 <tr><td class="header">SIP WG</td><td class="header">V. Gurbani, Ed.</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Bell Laboratories, Alcatel-Lucent</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">R. Mahy</td></tr>
-<tr><td class="header">Expires: September 10, 2009</td><td class="header">Plantronics</td></tr>
+<tr><td class="header">Expires: February 6, 2010</td><td class="header">Unaffiliated</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">B. Tate</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">BroadSoft</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">March 09, 2009</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">August 05, 2009</td></tr>
 </table></td></tr></table>
 <h1><br />Connection Reuse in the Session Initiation Protocol (SIP)<br />DOCNAME</h1>
 
@@ -182,7 +182,7 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on September 10, 2009.</p>
+This Internet-Draft will expire on February 6, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -320,7 +320,7 @@ the direction of the connection, i.e., either end can initiate the connection.
 SIP entities that can only open a connection in a specific direction -- perhaps
 because of Network Address Translation (NAT) and firewalls -- reuse
 their connections using the mechanism described in the outbound
-document <a class='info' href='#I-D.ietf-sip-outbound'>[I&#8209;D.ietf&#8209;sip&#8209;outbound]<span> (</span><span class='info'>Jennings, C. and R. Mahy, &ldquo;Managing Client Initiated Connections in the Session Initiation           Protocol (SIP),&rdquo; October&nbsp;2008.</span><span>)</span></a>.
+document <a class='info' href='#I-D.ietf-sip-outbound'>[I&#8209;D.ietf&#8209;sip&#8209;outbound]<span> (</span><span class='info'>Jennings, C. and R. Mahy, &ldquo;Managing Client Initiated Connections in the Session Initiation           Protocol (SIP),&rdquo; June&nbsp;2009.</span><span>)</span></a>.
 </p>
 <p>This memo concerns connection reuse, not persistent connections
 (see definitions of these in <a class='info' href='#terminology'>Section&nbsp;1<span> (</span><span class='info'>Terminology</span><span>)</span></a>).  Behavior 
@@ -348,13 +348,13 @@ they typically originate their connections from an ephemeral port.
 </p>
 <p>In the following example, A listens for SIP requests over 
 TLS on TCP port 5061 (the default port for 
-SIP over TLS over TCP), but uses an ephemeral port (port 8293) for a 
+SIP over TLS over TCP), but uses an ephemeral port (port 49160) for a 
 new connection to B.  These entities could be SIP user agents or 
 SIP proxy servers.
 </p><br /><hr class="insert" />
 <a name="uni-dir"></a>
 <div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
-       +-----------+ 8293 (UAC)      5061 (UAS) +-----------+
+       +-----------+ 49160 (UAC)     5061 (UAS) +-----------+
        |           |---------------------------&gt;|           |
        |  Entity   |                            |  Entity   |
        |     A     |                            |     B     |
@@ -375,23 +375,24 @@ as shown below.
 </p><br /><hr class="insert" />
 <a name="two-conns"></a>
 <div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
-       +-----------+ 8293              5061 +-----------+
+       +-----------+ 49160             5061 +-----------+
        |           |.......................&gt;|           |
        |  Entity   |                        |  Entity   |
-       |     A     | 5061              9741 |     B     |
+       |     A     | 5061             49170 |     B     |
        |           |&lt;-----------------------|           |
        +-----------+                        +-----------+
 
 </pre></div><table border="0" cellpadding="0" cellspacing="2" align="center"><tr><td align="center"><font face="monaco, MS Sans Serif" size="1"><b>&nbsp;Figure&nbsp;2: Two connections for requests between A and B.&nbsp;</b></font><br /></td></tr></table><hr class="insert" />
 
-<p>While this is adequate for TCP, TLS connections can be reused 
-to send requests in the backwards direction since each end can be 
-authenticated when the connection is initially set up.  Once 
-the authentication step has been performed, the situation can thought 
-to resemble the picture in <a class='info' href='#uni-dir'>Figure&nbsp;1<span> (</span><span class='info'>Uni-directional connection for requests from A to B</span><span>)</span></a> except that the 
-connection opened from A to B is shared; when A wants to send a request 
-to B, it will reuse this connection, and when B wants to send a request 
-to A, it will reuse the same connection.
+<p>Unlike TCP, TLS connections can be reused to send requests in 
+the backwards direction since each end can be authenticated when the 
+connection is initially set up.  Once the authentication step 
+has been performed, the situation can thought to resemble the picture 
+in <a class='info' href='#uni-dir'>Figure&nbsp;1<span> (</span><span class='info'>Uni-directional connection for requests from A to B</span><span>)</span></a> except that A and B both use a single
+shared connection, for example, between port 49160 on A and
+port 5061 on B.  When A wants to send a request to B, it will reuse 
+this connection, and when B wants to send a request to A, it will 
+reuse the same connection.
 </p>
 <a name="anchor3"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -705,14 +706,14 @@ their connections for long periods of time.  Clients, therefore, SHOULD
 NOT automatically drop connections on completion of a transaction or 
 termination of a dialog.
 </p>
-<p>The proposed mechanism uses a new Via header 
+<p>The mechanism for connection reuse uses a new Via header 
 field parameter.  The "alias" header field parameter is included in 
 a Via header field value to indicate that the client wants to create 
 a transport layer alias.  The client places its advertised address in 
 the Via header field value (in the "sent-by" production).
 </p>
 <p>If the client places an "alias" header field parameter in the topmost 
-Via header of the request, the client MUST keep the connection open for 
+Via header of the request, the client SHOULD keep the connection open for 
 as long as the resources on the host operating system allow it to, and 
 that the client MUST accept requests over this connection -- in addition 
 to the default listening port -- from its downstream peer.  And furthermore, 
@@ -737,13 +738,15 @@ MUST continue receiving requests on their default port.
 forming an alias; <a class='info' href='#auth-tls-client'>Section&nbsp;9.1<span> (</span><span class='info'>Authenticating TLS Connections: Client View</span><span>)</span></a> discusses the 
 authentication steps in more detail.  Once the server has been 
 authenticated, the client MUST cache, in the alias table, the identity 
-(or identities) of the server as they appear in the X.509 certificate 
-subjectAlternativeName extension field.  The client MUST also populate 
-the destination IP address, port, and transport of the server in the 
-alias table; these fields are retrieved from executing RFC3263 server
-resolution process on the next hop URI.  And finally, the client MUST 
-populate the alias descriptor field with the connection handle (or
-identifier) used to connect to the server.
+(or identities) of the server as determined in Section 7.1 of
+RFC YYYY <a class='info' href='#I-D.domain-certs'>[I&#8209;D.domain&#8209;certs]<span> (</span><span class='info'>Gurbani, V., Lawrence, S., and A. Jeffrey, &ldquo;Domain Certificates in the Session Initiation Protocol (SIP),&rdquo; May&nbsp;2009.</span><span>)</span></a> (Note to RFC Editor: Please 
+replace RFC YYYY with the RFC number assigned to the this reference.)
+The client MUST also populate the destination IP address, port, 
+and transport of the server in the alias table; these fields are 
+retrieved from executing RFC3263 server resolution process on the 
+next hop URI.  And finally, the client MUST populate the alias 
+descriptor field with the connection handle (or identifier) used to 
+connect to the server.
 </p>
 <p>Once the alias table has been updated with a resolved address,
 and the client wants to send a new request in the direction of the server, 
@@ -769,7 +772,7 @@ request or an ACK request for a non-2xx response is sent downstream.
 Normally, these would be sent over the same connection that the 
 INVITE request was sent over.  However, if between the sending of
 the INVITE request and subsequent sending of the CANCEL request or 
-ACK request to a non-2xx response, the connection was reclaimed, then 
+ACK request to a non-2xx response, the connection was closed, then 
 the client SHOULD open a new connection to the resolved address and 
 send the CANCEL request or ACK request there instead.  The client
 MAY insert the newly opened connection into the alias table.
@@ -819,9 +822,9 @@ updated accordingly.
 server MUST use it as a destination port.  Otherwise the default port is 
 the destination port.
 </p>
-<p>Servers SHOULD authenticate the connection before forming an alias.  
-<a class='info' href='#auth-tls-server'>Section&nbsp;9.2<span> (</span><span class='info'>Authenticating TLS Connections: Server View</span><span>)</span></a> discusses the authentication steps
-in more detail. 
+<p>Servers MUST follow the authentication steps outlined in
+<a class='info' href='#auth-tls-server'>Section&nbsp;9.2<span> (</span><span class='info'>Authenticating TLS Connections: Server View</span><span>)</span></a> to authenticate the connection 
+before forming an alias.
 </p>
 <p>The server, if it decides to reuse the connection, MUST cache
 in the alias table the identity (or identities) of the client as they
@@ -854,7 +857,7 @@ connection only if all of the following conditions hold:
 <a name="rfc.section.8.3"></a><h3>8.3.&nbsp;
 Closing a TLS connection</h3>
 
-<p>Either the client of the server may terminate a TLS session by
+<p>Either the client or the server may terminate a TLS session by
 sending a TLS closure alert.  Before closing a TLS connection, 
 the initiator of the closure MUST either wait for any outstanding 
 SIP transactions to complete, or explicitly abandon them.
@@ -885,7 +888,8 @@ Authenticating TLS Connections: Client View</h3>
 
 <p>When a TLS client establishes a connection with a server, it is
 presented with the server's X.509 certificate.  Authentication proceeds
-as described in Section 5 of RFC YYYY <a class='info' href='#I-D.domain-certs'>[I&#8209;D.domain&#8209;certs]<span> (</span><span class='info'>Gurbani, V., Lawrence, S., and A. Jeffrey, &ldquo;Domain Certificates in the Session Initiation Protocol (SIP),&rdquo; October&nbsp;2008.</span><span>)</span></a>.
+as described in Section 7.3 ("Client behavior") of RFC 
+YYYY <a class='info' href='#I-D.domain-certs'>[I&#8209;D.domain&#8209;certs]<span> (</span><span class='info'>Gurbani, V., Lawrence, S., and A. Jeffrey, &ldquo;Domain Certificates in the Session Initiation Protocol (SIP),&rdquo; May&nbsp;2009.</span><span>)</span></a>.
  </p>
 <blockquote class="text">
 <p>Note to RFC Editor: Please replace RFC YYYY with the RFC number
@@ -902,7 +906,8 @@ Authenticating TLS Connections: Server View</h3>
 <p>A TLS server conformant to this specification MUST ask for a client
 certificate; if the client possesses a certificate, it will be presented
 to the server for mutual authentication, and authentication proceeds
-as described in Section 6 of RFC YYYY <a class='info' href='#I-D.domain-certs'>[I&#8209;D.domain&#8209;certs]<span> (</span><span class='info'>Gurbani, V., Lawrence, S., and A. Jeffrey, &ldquo;Domain Certificates in the Session Initiation Protocol (SIP),&rdquo; October&nbsp;2008.</span><span>)</span></a>.
+as described in Section 7.4 ("Server behavior") of RFC YYYY 
+<a class='info' href='#I-D.domain-certs'>[I&#8209;D.domain&#8209;certs]<span> (</span><span class='info'>Gurbani, V., Lawrence, S., and A. Jeffrey, &ldquo;Domain Certificates in the Session Initiation Protocol (SIP),&rdquo; May&nbsp;2009.</span><span>)</span></a>.
  </p>
 <blockquote class="text">
 <p>Note to RFC Editor: Please replace RFC YYYY with the RFC number
@@ -980,6 +985,17 @@ a specific TLS connection.  Absent such a guarantee of an identity tied
 to a specific connection, a normal TCP or SCTP connection cannot be 
 used to send requests in the backwards direction without a significant 
 risk of inadvertent (or otherwise) connection hijacking.
+</p>
+<p>The above discussion details the impact on P2 when connection
+reuse is desired for virtual servers.  There is a subtle, but
+important impact on P1 as well.
+</p>
+<p>P1 should keep separate alias tables for the requests served
+from the UAs in the example.com domain from those served by
+the UAs in the example.net domain.  This is so that the
+boundary between the two domains is preserved; P1 MUST NOT 
+open a connection on behalf of one domain and reuse it to send a 
+new request on behalf of another domain.
 </p>
 <a name="anchor9"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -1059,7 +1075,7 @@ References</h3>
 <tr><td class="author-text" valign="top"><a name="RFC5234">[RFC5234]</a></td>
 <td class="author-text">Crocker, D. and P. Overell, &ldquo;<a href="http://tools.ietf.org/html/rfc5234">Augmented BNF for Syntax Specifications: ABNF</a>,&rdquo; RFC&nbsp;5234, January&nbsp;2008 (<a href="http://www.ietf.org/rfc/rfc5234.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.domain-certs">[I-D.domain-certs]</a></td>
-<td class="author-text">Gurbani, V., Lawrence, S., and A. Jeffrey, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-domain-certs-02.txt">Domain Certificates in the Session Initiation Protocol (SIP)</a>,&rdquo; draft-ietf-sip-domain-certs-02 (work in progress), October&nbsp;2008 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-domain-certs-02.txt">TXT</a>).</td></tr>
+<td class="author-text">Gurbani, V., Lawrence, S., and A. Jeffrey, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-domain-certs-04.txt">Domain Certificates in the Session Initiation Protocol (SIP)</a>,&rdquo; draft-ietf-sip-domain-certs-04 (work in progress), May&nbsp;2009 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-domain-certs-04.txt">TXT</a>).</td></tr>
 </table>
 
 <a name="rfc.references2"></a><br /><hr />
@@ -1070,8 +1086,8 @@ References</h3>
 <td class="author-text">Camarillo, G., &ldquo;<a href="http://tools.ietf.org/html/rfc3968">The Internet Assigned Numbers Authority (IANA) Header 
    Field Parameter Registry for the Session Initiation Protocol (SIP)</a>,&rdquo; BCP&nbsp;98, RFC&nbsp;3968, December&nbsp;2004 (<a href="http://www.ietf.org/rfc/rfc3968.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.ietf-sip-outbound">[I-D.ietf-sip-outbound]</a></td>
-<td class="author-text">Jennings, C. and R. Mahy, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-outbound-16.txt.txt">Managing Client Initiated Connections in the Session Initiation 
-         Protocol (SIP)</a>,&rdquo; draft-ietf-sip-outbound-16.txt (work in progress), October&nbsp;2008 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-outbound-16.txt">TXT</a>).</td></tr>
+<td class="author-text">Jennings, C. and R. Mahy, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-outbound-20.txt">Managing Client Initiated Connections in the Session Initiation 
+         Protocol (SIP)</a>,&rdquo; draft-ietf-sip-outbound-20 (work in progress), June&nbsp;2009 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-outbound-20.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="Book-Rescorla-TLS">[Book-Rescorla-TLS]</a></td>
 <td class="author-text">Rescorla, E., &ldquo;SSL and TLS: Designing and Building Secure Systems,&rdquo; Addison-Wesley Publishing&nbsp;, 2001.</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC3725">[RFC3725]</a></td>
@@ -1095,7 +1111,7 @@ References</h3>
 <tr><td class="author-text">&nbsp;</td>
 <td class="author-text">Rohan Mahy</td></tr>
 <tr><td class="author-text">&nbsp;</td>
-<td class="author-text">Plantronics</td></tr>
+<td class="author-text">Unaffiliated</td></tr>
 <tr><td class="author" align="right">Email:&nbsp;</td>
 <td class="author-text"><a href="mailto:rohan@ekabal.com">rohan@ekabal.com</a></td></tr>
 <tr cellpadding="3"><td>&nbsp;</td><td>&nbsp;</td></tr>
