--- a/draft-ietf-netmod-dsdl-map-10.html
+++ b/draft-ietf-netmod-dsdl-map-10.html
@@ -158,7 +158,7 @@
 <tr><td class="header">Expires: April 24, 2011</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
 <h1><br />Mapping YANG to Document Schema
-  Definition Languages and Validating NETCONF Content<br />draft-ietf-netmod-dsdl-map-09</h1>
+  Definition Languages and Validating NETCONF Content<br />draft-ietf-netmod-dsdl-map-10</h1>
 
 <h3>Abstract</h3>
 
@@ -372,23 +372,25 @@ The 'submodule' Statement<br />
 The 'type' Statement<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#empty-type">10.53.1.</a>&nbsp;
 The &quot;empty&quot; Type<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#boobi-types">10.53.2.</a>&nbsp;
-The &quot;boolean&quot; and &quot;binary&quot; Types<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#bits-type">10.53.3.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#boolean-type">10.53.2.</a>&nbsp;
+The &quot;boolean&quot; Type<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#binary-type">10.53.3.</a>&nbsp;
+The &quot;binary&quot; Type<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#bits-type">10.53.4.</a>&nbsp;
 The &quot;bits&quot; Type<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#enuun-type">10.53.4.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#enuun-type">10.53.5.</a>&nbsp;
 The &quot;enumeration&quot; and &quot;union&quot; Types<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#identityref-type">10.53.5.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#identityref-type">10.53.6.</a>&nbsp;
 The &quot;identityref&quot; Type<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#instance-identifier-type">10.53.6.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#instance-identifier-type">10.53.7.</a>&nbsp;
 The &quot;instance-identifier&quot; Type<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#leafref-type">10.53.7.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#leafref-type">10.53.8.</a>&nbsp;
 The &quot;leafref&quot; Type<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#numeric-types">10.53.8.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#numeric-types">10.53.9.</a>&nbsp;
 The Numeric Types<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#string-type">10.53.9.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#string-type">10.53.10.</a>&nbsp;
 The &quot;string&quot; Type<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#derived-types">10.53.10.</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#derived-types">10.53.11.</a>&nbsp;
 Derived Types<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<a href="#typedef-stmt">10.54.</a>&nbsp;
 The 'typedef' Statement<br />
@@ -1144,7 +1146,7 @@ NETMOD-Specific Annotations</h3>
 </tr>
 <tr>
 <td align="left">&lt;nma:instance-identifier&gt;</td>
-<td align="left"><a class='info' href='#instance-identifier-type'>10.53.6<span> (</span><span class='info'>The &quot;instance-identifier&quot; Type</span><span>)</span></a></td>
+<td align="left"><a class='info' href='#instance-identifier-type'>10.53.7<span> (</span><span class='info'>The &quot;instance-identifier&quot; Type</span><span>)</span></a></td>
 <td align="left"><a class='info' href='#item-reqinst'>2</a></td>
 </tr>
 <tr>
@@ -1159,7 +1161,7 @@ NETMOD-Specific Annotations</h3>
 </tr>
 <tr>
 <td align="left">@nma:leafref</td>
-<td align="left"><a class='info' href='#leafref-type'>10.53.7<span> (</span><span class='info'>The &quot;leafref&quot; Type</span><span>)</span></a></td>
+<td align="left"><a class='info' href='#leafref-type'>10.53.8<span> (</span><span class='info'>The &quot;leafref&quot; Type</span><span>)</span></a></td>
 <td align="left">&nbsp;</td>
 </tr>
 <tr>
@@ -2455,7 +2457,7 @@ The 'base' Statement</h3>
 
 <p>This statement is ignored as a substatement of 'identity' and
       handled within the 'identityref' type if it appears as a
-      substatement of that type definition, see <a class='info' href='#identityref-type'>Section&nbsp;10.53.5<span> (</span><span class='info'>The &quot;identityref&quot; Type</span><span>)</span></a>.
+      substatement of that type definition, see <a class='info' href='#identityref-type'>Section&nbsp;10.53.6<span> (</span><span class='info'>The &quot;identityref&quot; Type</span><span>)</span></a>.
 </p>
 <a name="belongs-to-stmt"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -2470,7 +2472,7 @@ The 'belongs-to' Statement</h3>
 <a name="rfc.section.10.6"></a><h3>10.6.&nbsp;
 The 'bit' Statement</h3>
 
-<p>This statement is handled within the "bits" type, see <a class='info' href='#bits-type'>Section&nbsp;10.53.3<span> (</span><span class='info'>The &quot;bits&quot; Type</span><span>)</span></a>.
+<p>This statement is handled within the "bits" type, see <a class='info' href='#bits-type'>Section&nbsp;10.53.4<span> (</span><span class='info'>The &quot;bits&quot; Type</span><span>)</span></a>.
 </p>
 <a name="case-stmt"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -2911,7 +2913,7 @@ leaf-list foliage {
 <a name="rfc.section.10.29"></a><h3>10.29.&nbsp;
 The 'length' Statement</h3>
 
-<p>This statement is handled within the "string" type, see <a class='info' href='#string-type'>Section&nbsp;10.53.9<span> (</span><span class='info'>The &quot;string&quot; Type</span><span>)</span></a>.
+<p>This statement is handled within the "string" type, see <a class='info' href='#string-type'>Section&nbsp;10.53.10<span> (</span><span class='info'>The &quot;string&quot; Type</span><span>)</span></a>.
 </p>
 <a name="list-stmt"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -3065,7 +3067,7 @@ must 'current() &lt;= ../max-lease-time' {
 <a name="rfc.section.10.36"></a><h3>10.36.&nbsp;
 The 'namespace' Statement</h3>
 
-<p>This statement is mapped in two ways:
+<p>This statement is mapped simultaneously in two ways:
       </p>
 <ol class="text">
 <li>To the @xmlns:PREFIX attribute of the root
@@ -3131,14 +3133,14 @@ The 'output' Statement</h3>
 The 'path' Statement</h3>
 
 <p>This statement is handled within the "leafref" type, see
-      <a class='info' href='#leafref-type'>Section&nbsp;10.53.7<span> (</span><span class='info'>The &quot;leafref&quot; Type</span><span>)</span></a>.
+      <a class='info' href='#leafref-type'>Section&nbsp;10.53.8<span> (</span><span class='info'>The &quot;leafref&quot; Type</span><span>)</span></a>.
 </p>
 <a name="pattern-stmt"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.10.42"></a><h3>10.42.&nbsp;
 The 'pattern' Statement</h3>
 
-<p>This statement is handled within the "string" type, see <a class='info' href='#string-type'>Section&nbsp;10.53.9<span> (</span><span class='info'>The &quot;string&quot; Type</span><span>)</span></a>.
+<p>This statement is handled within the "string" type, see <a class='info' href='#string-type'>Section&nbsp;10.53.10<span> (</span><span class='info'>The &quot;string&quot; Type</span><span>)</span></a>.
 </p>
 <a name="position-stmt"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -3173,7 +3175,7 @@ The 'presence' Statement</h3>
 <a name="rfc.section.10.46"></a><h3>10.46.&nbsp;
 The 'range' Statement</h3>
 
-<p>This statement is handled within numeric types, see <a class='info' href='#numeric-types'>Section&nbsp;10.53.8<span> (</span><span class='info'>The Numeric Types</span><span>)</span></a>.
+<p>This statement is handled within numeric types, see <a class='info' href='#numeric-types'>Section&nbsp;10.53.9<span> (</span><span class='info'>The Numeric Types</span><span>)</span></a>.
 </p>
 <a name="reference-stmt"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -3189,7 +3191,7 @@ The 'reference' Statement</h3>
 The 'require-instance' Statement</h3>
 
 <p>This statement is handled within "instance-identifier" type
-      (<a class='info' href='#instance-identifier-type'>Section&nbsp;10.53.6<span> (</span><span class='info'>The &quot;instance-identifier&quot; Type</span><span>)</span></a>).
+      (<a class='info' href='#instance-identifier-type'>Section&nbsp;10.53.7<span> (</span><span class='info'>The &quot;instance-identifier&quot; Type</span><span>)</span></a>).
 </p>
 <a name="revision-stmt"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -3310,11 +3312,6 @@ The 'type' Statement</h3>
 <td align="left">character string</td>
 </tr>
 <tr>
-<td align="left">boolean</td>
-<td align="left">boolean</td>
-<td align="left">"true" or "false"</td>
-</tr>
-<tr>
 <td align="left">binary</td>
 <td align="left">base64Binary</td>
 <td align="left">binary data in base64 encoding</td>
@@ -3345,18 +3342,35 @@ The &quot;empty&quot; Type</h3>
 
 <p>This type is mapped to &lt;rng:empty/&gt;.
 </p>
-<a name="boobi-types"></a><br /><hr />
+<a name="boolean-type"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.10.53.2"></a><h3>10.53.2.&nbsp;
-The &quot;boolean&quot; and &quot;binary&quot; Types</h3>
+The &quot;boolean&quot; Type</h3>
 
-<p>These two built-in types do not allow any restrictions and
-        are mapped simply by inserting &lt;rng:data&gt; element whose
-        @type attribute is set to ARGUMENT mapped according to <a class='info' href='#tab-types'>Table&nbsp;4<span> (</span><span class='info'>YANG built-in datatypes with equivalents in the W3C                  XML Schema Type Library</span><span>)</span></a> above.
+<p>This built-in type does not allow any restrictions and is
+        mapped to the following XML fragment:
+</p><div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
+&lt;rng:choice&gt;
+  &lt;rng:value&gt;true&lt;/rng:value&gt;
+  &lt;rng:value&gt;false&lt;/rng:value&gt;
+&lt;/rng:choice&gt;</pre></div>
+<p>Note that the XSD "boolean" type cannot be used here
+        because it allows, unlike YANG, an alternative numeric
+        representation of boolean values: 0 for "false" and 1 for
+        "true".
+</p>
+<a name="binary-type"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.10.53.3"></a><h3>10.53.3.&nbsp;
+The &quot;binary&quot; Type</h3>
+
+<p>This built-in type does not allow any restrictions and is
+        mapped simply by inserting &lt;rng:data&gt; element whose
+        @type attribute value is set to "base64Binary" (see also <a class='info' href='#tab-types'>Table&nbsp;4<span> (</span><span class='info'>YANG built-in datatypes with equivalents in the W3C                  XML Schema Type Library</span><span>)</span></a>).
 </p>
 <a name="bits-type"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.10.53.3"></a><h3>10.53.3.&nbsp;
+<a name="rfc.section.10.53.4"></a><h3>10.53.4.&nbsp;
 The &quot;bits&quot; Type</h3>
 
 <p>This type is mapped to &lt;rng:list&gt; and for each 'bit'
@@ -3371,7 +3385,7 @@ The &quot;bits&quot; Type</h3>
 </p>
 <a name="enuun-type"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.10.53.4"></a><h3>10.53.4.&nbsp;
+<a name="rfc.section.10.53.5"></a><h3>10.53.5.&nbsp;
 The &quot;enumeration&quot; and &quot;union&quot; Types</h3>
 
 <p>These types are mapped to the &lt;rng:choice&gt;
@@ -3379,7 +3393,7 @@ The &quot;enumeration&quot; and &quot;union&quot; Types</h3>
 </p>
 <a name="identityref-type"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.10.53.5"></a><h3>10.53.5.&nbsp;
+<a name="rfc.section.10.53.6"></a><h3>10.53.6.&nbsp;
 The &quot;identityref&quot; Type</h3>
 
 <p>This type is mapped to the following named pattern
@@ -3405,7 +3419,7 @@ leaf foo {
 &lt;/element&gt;</pre></div>
 <a name="instance-identifier-type"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.10.53.6"></a><h3>10.53.6.&nbsp;
+<a name="rfc.section.10.53.7"></a><h3>10.53.7.&nbsp;
 The &quot;instance-identifier&quot; Type</h3>
 
 <p>This type is mapped to &lt;rng:data&gt; element with @type
@@ -3420,7 +3434,7 @@ The &quot;instance-identifier&quot; Type</h3>
 </p>
 <a name="leafref-type"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.10.53.7"></a><h3>10.53.7.&nbsp;
+<a name="rfc.section.10.53.8"></a><h3>10.53.8.&nbsp;
 The &quot;leafref&quot; Type</h3>
 
 <p>This type is mapped exactly as the type of the leaf given
@@ -3435,7 +3449,7 @@ The &quot;leafref&quot; Type</h3>
 </p>
 <a name="numeric-types"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.10.53.8"></a><h3>10.53.8.&nbsp;
+<a name="rfc.section.10.53.9"></a><h3>10.53.9.&nbsp;
 The Numeric Types</h3>
 
 <p>YANG built-in numeric types are "int8", "int16", "int32",
@@ -3526,14 +3540,14 @@ type int32 {
 </p>
 <a name="string-type"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.10.53.9"></a><h3>10.53.9.&nbsp;
+<a name="rfc.section.10.53.10"></a><h3>10.53.10.&nbsp;
 The &quot;string&quot; Type</h3>
 
 <p>This type is mapped to &lt;rng:data&gt; element with the
         @type attribute set to "string".
 </p>
 <p>The 'length' restriction is handled analogically to the
-        'range' restriction for the numeric types (<a class='info' href='#numeric-types'>Section&nbsp;10.53.8<span> (</span><span class='info'>The Numeric Types</span><span>)</span></a>):
+        'range' restriction for the numeric types (<a class='info' href='#numeric-types'>Section&nbsp;10.53.9<span> (</span><span class='info'>The Numeric Types</span><span>)</span></a>):
 </p>
 <p>If the length expression has just a single range, then
         </p>
@@ -3599,7 +3613,7 @@ type string {
 &lt;/rng:choice&gt;</pre></div>
 <a name="derived-types"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.10.53.10"></a><h3>10.53.10.&nbsp;
+<a name="rfc.section.10.53.11"></a><h3>10.53.11.&nbsp;
 Derived Types</h3>
 
 <p>If the 'type' statement refers to a derived type, it is
@@ -3648,7 +3662,7 @@ The 'typedef' Statement</h3>
 <p>Whenever a derived type is used with additional restrictions,
       the ancestor built-in type for the derived type is used instead with
       restrictions (facets) that are a combination of all restrictions
-      specified along the type derivation chain. See <a class='info' href='#derived-types'>Section&nbsp;10.53.10<span> (</span><span class='info'>Derived Types</span><span>)</span></a> for further details and an example.
+      specified along the type derivation chain. See <a class='info' href='#derived-types'>Section&nbsp;10.53.11<span> (</span><span class='info'>Derived Types</span><span>)</span></a> for further details and an example.
 </p>
 <p>An implementation MAY offer the option of recording all
       'typedef' statements as named patterns in the output RELAX NG
