--- a/draft-ietf-httpbis-content-disp-09.html
+++ b/draft-ietf-httpbis-content-disp-09.html
@@ -391,6 +391,7 @@
 <link href="#rfc.appendix.Appendix%20E.10" rel="Chapter" title="Appendix E.10 Since draft-ietf-httpbis-content-disp-05">
 <link href="#rfc.appendix.Appendix%20E.11" rel="Chapter" title="Appendix E.11 Since draft-ietf-httpbis-content-disp-06">
 <link href="#rfc.appendix.Appendix%20E.12" rel="Chapter" title="Appendix E.12 Since draft-ietf-httpbis-content-disp-07">
+<link href="#rfc.appendix.Appendix%20E.13" rel="Chapter" title="Appendix E.13 Since draft-ietf-httpbis-content-disp-08">
 <link href="#rfc.authors" rel="Chapter">
 
 
@@ -422,14 +423,14 @@
 </tr>
 <tr>
 <td class="left">Updates: 2616 (if approved)</td>
-<td class="right">March 14, 2011</td>
+<td class="right">March 28, 2011</td>
 </tr>
 <tr>
 <td class="left">Intended status: Standards Track</td>
 <td class="right"></td>
 </tr>
 <tr>
-<td class="left">Expires: September 15, 2011</td>
+<td class="left">Expires: September 29, 2011</td>
 <td class="right"></td>
 </tr>
 
@@ -438,19 +439,19 @@
   </table>
 
   <p class="title">Use of the Content-Disposition Header Field in the Hypertext Transfer Protocol (HTTP)<br />
-  <span class="filename">draft-ietf-httpbis-content-disp-08</span></p>
+  <span class="filename">draft-ietf-httpbis-content-disp-09</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>RFC 2616 defines the Content-Disposition response header field, but points out that it is not part of the HTTP/1.1 Standard.  This specification takes over the definition and registration of Content-Disposition, as used in HTTP, and clarifies internationalization aspects.  </p>
 <h1><a>Editorial Note (To be removed by RFC Editor before publication)</a></h1>
 <p>This specification is expected to replace the definition of Content-Disposition in the HTTP/1.1 specification, as currently revised by the IETF HTTPbis working group. See also <a href="http://trac.tools.ietf.org/wg/httpbis/trac/ticket/123">http://trac.tools.ietf.org/wg/httpbis/trac/ticket/123</a>.  </p>
 <p>Discussion of this draft should take place on the HTTPBIS working group mailing list (ietf-http-wg@w3.org). The current issues list is at <a href="http://trac.tools.ietf.org/wg/httpbis/trac/query?component=content-disp">http://trac.tools.ietf.org/wg/httpbis/trac/query?component=content-disp</a> and related documents (including fancy diffs) can be found at <a href="http://tools.ietf.org/wg/httpbis/">http://tools.ietf.org/wg/httpbis/</a>.  </p>
-<p>The changes in this draft are summarized in <a href="#changes.since.07">Appendix Appendix E.12</a>.  </p>
+<p>The changes in this draft are summarized in <a href="#changes.since.08">Appendix Appendix E.13</a>.  </p>
 <h1 id="rfc.status"><a href="#rfc.status">Status of this Memo</a></h1>
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 15, 2011.</p>
+<p>This Internet-Draft will expire on September 29, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -540,6 +541,8 @@
 </li>
 <li>Appendix E.12.   <a href="#rfc.appendix.Appendix%20E.12">Since draft-ietf-httpbis-content-disp-07</a>
 </li>
+<li>Appendix E.13.   <a href="#rfc.appendix.Appendix%20E.13">Since draft-ietf-httpbis-content-disp-08</a>
+</li>
 <li><a href="#rfc.authors">Author's Address</a>
 </li>
 
@@ -561,7 +564,7 @@
 <a href="#rfc.section.2">2.</a> <a href="#notational.conventions" id="notational.conventions">Notational Conventions</a>
 </h1>
 <p id="rfc.section.2.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a href="#RFC2119">[RFC2119]</a>.  </p>
-<p id="rfc.section.2.p.2">This specification uses the augmented BNF notation defined in Section 2.1 of <a href="#RFC2616">[RFC2616]</a>, including its rules for implied linear whitespace (LWS).  </p>
+<p id="rfc.section.2.p.2">This specification uses the augmented BNF (ABNF) notation defined in Section 2.1 of <a href="#RFC2616">[RFC2616]</a>, including its rules for implied linear whitespace (LWS).  </p>
 <h1 id="rfc.section.3">
 <a href="#rfc.section.3">3.</a> <a href="#conformance.and.error.handling" id="conformance.and.error.handling">Conformance and Error Handling</a>
 </h1>
@@ -607,9 +610,9 @@
 <pre>
   ext-value   = &lt;ext-value, defined in [RFC5987], Section 3.2&gt;
 </pre>
-<p id="rfc.section.4.1.p.1">Header field values with multiple instances of the same parameter name are invalid.  </p>
+<p id="rfc.section.4.1.p.1">Content-Disposition header field values with multiple instances of the same parameter name are invalid.  </p>
 <p id="rfc.section.4.1.p.2">Note that due to the rules for implied linear whitespace (Section 2.1 of <a href="#RFC2616">[RFC2616]</a>), OPTIONAL whitespace can appear between words (token or quoted-string) and separator characters.  </p>
-<p id="rfc.section.4.1.p.3">Furthermore note that the format used for ext-value allows specifying a natural language; this is of limited use for filenames and is likely to be ignored by recipients.  </p>
+<p id="rfc.section.4.1.p.3">Furthermore note that the format used for ext-value allows specifying a natural language (e.g., "en"); this is of limited use for filenames and is likely to be ignored by recipients.  </p>
 <h1 id="rfc.section.4.2">
 <a href="#rfc.section.4.2">4.2.</a> <a href="#disposition.type" id="disposition.type">Disposition Type</a>
 </h1>
@@ -627,7 +630,7 @@
 
 <ul>
 <li>Recipients MUST NOT be able to write into any location other than one to which they are specifically entitled. To illustrate the problem consider the consequences of being able to overwrite well-known system locations (such as "/etc/passwd"). One strategy to achieve this is to never trust folder name information in the filename parameter, for instance by stripping all but the last path segment and only consider the actual filename (where 'path segment' are the components of the field value delimited by the path separator characters "\" and "/").  </li>
-<li>Many platforms do not use Internet Media Types (<a href="#RFC2046">[RFC2046]</a>) to hold type information in the file system, but rely on filename extensions instead. Trusting the server-provided file extension could introduce a privilege escalation when the saved file is later opened (consider ".exe"). Thus, recipients SHOULD ensure that a file extension is used that is safe, optimally matching the media type of the received payload.  </li>
+<li>Many platforms do not use Internet Media Types (<a href="#RFC2046">[RFC2046]</a>) to hold type information in the file system, but rely on filename extensions instead. Trusting the server-provided file extension could introduce a privilege escalation when the saved file is later opened (consider ".exe"). Thus, recipients which make use of file extensions to determine the media type MUST ensure that a file extension is used that is safe, optimally matching the media type of the received payload.  </li>
 <li>Recipients SHOULD strip or replace character sequences that are known to cause confusion both in user interfaces and in filenames, such as control characters and leading and trailing whitespace.  </li>
 <li>Other aspects recipients need to be aware of are names that have a special meaning in the file system or in shell commands, such as "." and "..", "~", "|", and also device names. Recipients SHOULD ignore or substitute names like these.  </li>
 </ul>
@@ -707,6 +710,8 @@ Content-Disposition: Attachment; filename=example.html
 <dd style="margin-left: 8">IETF</dd>
 <dt>Specification document:</dt>
 <dd style="margin-left: 8">this specification (<a href="#header.field.definition">Section 4</a>)</dd>
+<dt>Related information:</dt>
+<dd style="margin-left: 8">none</dd>
 </dl>
 
 <p> </p>
@@ -777,6 +782,11 @@ Content-Disposition: Attachment; filename=example.html
 <td class="top">
 <a href="mailto:timbl@w3.org" title="World Wide Web Consortium">Berners-Lee, T.</a>, <a href="mailto:fielding@gbiv.com" title="Day Software">Fielding, R.</a> and <a href="mailto:LMM@acm.org" title="Adobe Systems Incorporated">L. Masinter</a>, "<a href="http://tools.ietf.org/html/rfc3986">Uniform Resource Identifier (URI): Generic Syntax</a>", STD 66, RFC 3986, January 2005.</td>
 </tr>
+<tr>
+<td class="reference"><b id="US-ASCII">[US-ASCII]</b></td>
+<td class="top">
+<a>American National Standards Institute</a>, "<a>Coded Character Set -- 7-bit American Standard Code for Information Interchange</a>", ANSI X3.4, 1986.</td>
+</tr>
 </tbody></table>
 <h1 id="rfc.appendix.Appendix A">
 <a href="#rfc.appendix.Appendix%20A">Appendix A.</a> <a href="#changes.from.rfc2616" id="changes.from.rfc2616">Changes from the RFC 2616 Definition</a>
@@ -827,7 +837,7 @@ Content-Disposition: Attachment; filename=example.html
 <a href="#rfc.appendix.Appendix%20C.4">Appendix C.4.</a> <a href="#alternatives.implementations" id="alternatives.implementations">Implementations (to be removed by RFC Editor before publication)</a>
 </h1>
 <p id="rfc.section.Appendix C.4.p.1">Unfortunately, as of March 2011, neither the encoding defined in RFCs 2231 and 5987, nor any of the alternate approaches discussed above was implemented interoperably. Thus, this specification recommends the approach defined in RFC 5987, which at least has the advantage of actually being specified properly.  </p>
-<p id="rfc.section.Appendix C.4.p.2">The table below shows the implementation support for the various approaches: </p>
+<p id="rfc.section.Appendix C.4.p.2">The table below shows the support for the various approaches in the current implementations: </p>
 <div id="#rfc.table.1"></div>
 <table cellpadding="3" cellspacing="0" class="tt full left">
 <thead><tr>
@@ -883,7 +893,7 @@ Content-Disposition: Attachment; filename=example.html
 </tbody>
 </table>
 <p id="rfc.section.Appendix C.4.p.3">(*) Does not implement the fallback behavior to "filename" described in <a href="#disposition.parameter.filename">Section 4.3</a>; a fix is planned for Firefox 5.  </p>
-<p id="rfc.section.Appendix C.4.p.4">(**) Starting with IE9RC, but only implements UTF-8.  </p>
+<p id="rfc.section.Appendix C.4.p.4">(**) Starting with Internet Explorer 9, but only implements UTF-8.  </p>
 <h1 id="rfc.appendix.Appendix D">
 <a href="#rfc.appendix.Appendix%20D">Appendix D.</a> <a href="#advice.generating" id="advice.generating">Advice on Generating Content-Disposition Header Fields</a>
 </h1>
@@ -891,7 +901,7 @@ Content-Disposition: Attachment; filename=example.html
 <p></p>
 
 <ul>
-<li>Include a "filename" parameter when US-ASCII is sufficiently expressive.</li>
+<li>Include a "filename" parameter when US-ASCII (<a href="#US-ASCII">[US-ASCII]</a>) is sufficiently expressive.</li>
 <li>Use the 'token' form of the filename parameter only when it does not contain disallowed characters (e.g., spaces); in such cases, the quoted-string form should be used.</li>
 <li>Avoid including the percent character followed by two hexadecimal characters (e.g., %A9) in the filename parameter, since some existing implementations consider it to be an escape character, while others will pass it through unchanged.</li>
 <li>Avoid including the "\" character in the quoted-string form of the filename parameter, as escaping is not implemented by some user agents, and can be considered as an illegal path character.</li>
@@ -1004,6 +1014,10 @@ Content-Disposition: Attachment; filename=example.html
 <a href="#rfc.appendix.Appendix%20E.12">Appendix E.12.</a> <a href="#changes.since.07" id="changes.since.07">Since draft-ietf-httpbis-content-disp-07</a>
 </h1>
 <p id="rfc.section.Appendix E.12.p.1">Rephrase the requirement about well-known file system locations, and also clarify that by "last path segment" we mean the actual filename.  Added a forward reference from "invalid" to the section that defines a valid header field.  </p>
+<h1 id="rfc.appendix.Appendix E.13">
+<a href="#rfc.appendix.Appendix%20E.13">Appendix E.13.</a> <a href="#changes.since.08" id="changes.since.08">Since draft-ietf-httpbis-content-disp-08</a>
+</h1>
+<p id="rfc.section.Appendix E.13.p.1">Update: Internet Explorer 9 is released.  Various editorial improvements.  Add US-ASCII reference.  Strengthen file extension handling requirement to MUST for those recipients that actually use file extensions to map media types.  </p>
 <h1 id="rfc.authors"><a href="#rfc.authors">Author's Address</a></h1>
 <div class="avoidbreak">
   <address class="vcard">
