draft-freed-sieve-notary-09

--- a/draft-freed-sieve-notary-09.html
+++ b/draft-freed-sieve-notary-09.html
@@ -153,15 +153,16 @@ Deliver-By Extensions">
 --></style>
 </head>
 <body>
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
-<tr><td class="header">Network Working Group</td><td class="header">N. Freed</td></tr>
+<tr><td class="header">Sieve Working Group</td><td class="header">N. Freed</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Oracle</td></tr>
-<tr><td class="header">Intended status: Standards Track</td><td class="header">May 4, 2010</td></tr>
-<tr><td class="header">Expires: November 5, 2010</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Standards Track</td><td class="header">May 26, 2010</td></tr>
+<tr><td class="header">Expires: November 27, 2010</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
 <h1><br />Sieve Email Filtering: 
 Delivery Status Notifications and
-Deliver-By Extensions<br />draft-freed-sieve-notary-08</h1>
+Deliver-By Extensions<br />draft-freed-sieve-notary-09</h1>
 
 <h3>Abstract</h3>
 
@@ -280,7 +281,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on November 5, 2010.</p>
+This Internet-Draft will expire on November 27, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -296,8 +297,54 @@ to this document. Code Components extracted from this document must
 include Simplified BSD License text as described in Section 4.e of
 the Trust Legal Provisions and are provided without warranty as
 described in the Simplified BSD License.</p>
+<a name="toc"></a><br /><hr />
+<h3>Table of Contents</h3>
+<p class="toc">
+<a href="#intro">1.</a>&nbsp;
+Introduction<br />
+<a href="#conventions">2.</a>&nbsp;
+Conventions used in this document<br />
+<a href="#anchor1">3.</a>&nbsp;
+Capability Identifiers<br />
+<a href="#envelope-dsn">4.</a>&nbsp;
+Envelope-dsn Extension<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#envelope-dsn-examples">4.1.</a>&nbsp;
+Examples<br />
+<a href="#envelope-deliverby">5.</a>&nbsp;
+Envelope-deliverby Extension<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#envelope-deliverby-examples">5.1.</a>&nbsp;
+Examples<br />
+<a href="#redirect-dsn">6.</a>&nbsp;
+redirect-dsn extension<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#mail-from-dsn">6.1.</a>&nbsp;
+MAIL FROM address selection<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#redirect-dsn-example">6.2.</a>&nbsp;
+Example<br />
+<a href="#redirect-deliverby">7.</a>&nbsp;
+redirect-deliverby extension<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#mail-from-deliverby">7.1.</a>&nbsp;
+MAIL FROM address selection<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#redirect-deliverby-example">7.2.</a>&nbsp;
+Example<br />
+<a href="#security">8.</a>&nbsp;
+Security Considerations<br />
+<a href="#IANA">9.</a>&nbsp;
+IANA Considerations<br />
+<a href="#rfc.references1">10.</a>&nbsp;
+References<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references1">10.1.</a>&nbsp;
+Normative references<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references2">10.2.</a>&nbsp;
+Informative references<br />
+<a href="#anchor4">Appendix&nbsp;A.</a>&nbsp;
+Acknowledgements<br />
+<a href="#rfc.authors">&#167;</a>&nbsp;
+Author's Address<br />
+</p>
+<br clear="all" />
 
 <a name="intro"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.1"></a><h3>1.&nbsp;
 Introduction</h3>
 
@@ -338,6 +385,7 @@ ability to set a time limit for delivery as specified in
 
 </p>
 <a name="conventions"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.2"></a><h3>2.&nbsp;
 Conventions used in this document</h3>
 
@@ -360,6 +408,7 @@ defined in Section 4.1 of <a class='info' href='#RFC3461'>[RFC3461]<span> (</spa
 
 </p>
 <a name="anchor1"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.3"></a><h3>3.&nbsp;
 Capability Identifiers</h3>
 
@@ -370,6 +419,7 @@ document are "envelope-dsn", "redirect-dsn", "envelope-deliverby", and
 
 </p>
 <a name="envelope-dsn"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.4"></a><h3>4.&nbsp;
 Envelope-dsn Extension</h3>
 
@@ -445,6 +495,7 @@ specified and 0 if the NOTIFY parameter is not present.
 
 </p>
 <a name="envelope-dsn-examples"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.4.1"></a><h3>4.1.&nbsp;
 Examples</h3>
 
@@ -497,6 +548,7 @@ if envelope :matches "orcpt" "rfc822;*@example.com"
 }
 </pre></div>
 <a name="envelope-deliverby"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.5"></a><h3>5.&nbsp;
 Envelope-deliverby Extension</h3>
 
@@ -607,15 +659,16 @@ additional checks or else use a comparator which, unlike i;ascii-numeric,
 is capable of handling signed integers.
 
 </p>
-<a name="envelope-deliverby-example"></a><br /><hr />
+<a name="envelope-deliverby-examples"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.5.1"></a><h3>5.1.&nbsp;
-Example</h3>
+Examples</h3>
 
 <p>
 As noted above, this extension does not provide access to the originator's
 initial by-time setting for the simple reason that this information is not
 part of the envelope. It can, however, be used to check and see if the message
-was delivered within the alloted time. Note the additional check to see if the
+was delivered within the allotted time. Note the additional check to see if the
 value is negative.
 
 </p><div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
@@ -632,24 +685,45 @@ if anyof (envelope :contains "bytimerelative" "-",
 }
 </pre></div>
 <p>
-This operation can be done more simply if the date and variables extensions are
+This operation can be done more simply if the date <a class='info' href='#RFC5270'>[RFC5270]<span> (</span><span class='info'>Jang, H., Jee, J., Han, Y., Park, S., and J. Cha, &ldquo;Mobile IPv6 Fast Handovers over IEEE 802.16e Networks,&rdquo; June&nbsp;2008.</span><span>)</span></a>
+and variables <a class='info' href='#RFC5229'>[RFC5229]<span> (</span><span class='info'>Homme, K., &ldquo;Sieve Email Filtering: Variables Extension,&rdquo; January&nbsp;2008.</span><span>)</span></a> extensions are
 available:
 
 </p><div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
-require ["envelope", "envelope-deliverby", "relational", "date"
+require ["envelope", "envelope-deliverby", "relational", "date",
          "variables"];
 
 # Check to see if this message didn't make it in the time alloted by
 # the originator.
 if currentdate :matches "iso8601" "*" {
     set "cdate" "${0}";
-    if envelope :value "ge" "bytimeabsolute" "${cdate}")
-    {
+    if envelope :value "ge" "bytimeabsolute" "${cdate}" {
         # do whatever
     }
 }
 </pre></div>
+<p>
+Note that there is no need to force the use of a particular time zone
+since both currentdate and and the bytimeabsolute value are required to
+default to the local time zone. A similar check could be written using
+:zone if the action taken depends on the time
+
+</p><div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
+require ["envelope", "envelope-deliverby", "relational", "date",
+         "variables"];
+
+# If the message didn't make it in time file it according to when it
+# should have been received
+if envelope :matches :zone "+0000" "bytimeabolute "*T*:*:*" {
+    set "bdate" "${0}";
+    set "bhour" "${2}";
+    if currentdate :zone "+0000" :value "lt" "iso8601" "${bdate}")
+        fileinto "missed-${bhour}";
+    }
+}
+</pre></div>
 <a name="redirect-dsn"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.6"></a><h3>6.&nbsp;
 redirect-dsn extension</h3>
 
@@ -689,6 +763,7 @@ MUST NOT cause an error.
 
 </p>
 <a name="mail-from-dsn"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.6.1"></a><h3>6.1.&nbsp;
 MAIL FROM address selection</h3>
 
@@ -702,6 +777,7 @@ address to the address of the sieve owner.
 
 </p>
 <a name="redirect-dsn-example"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.6.2"></a><h3>6.2.&nbsp;
 Example</h3>
 
@@ -722,6 +798,7 @@ if address "from" "user@example.com"
 }
 </pre></div>
 <a name="redirect-deliverby"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.7"></a><h3>7.&nbsp;
 redirect-deliverby extension</h3>
 
@@ -750,7 +827,7 @@ by the date-time ABN production given in <a class='info' href='#RFC3339'>[RFC333
 :bymode specifies whether a notification should
 be sent or the message simply returned if the time limit is exceeded. The
 default is "return" if :bymode is not specified. :bytrace, if specified,
-activiates message tracing.
+activates message tracing.
 
 </p>
 <p>
@@ -768,12 +845,13 @@ When these arguments are specified, they are used to construct the
 corresponding BY ESMTP MAIL FROM parameter. The :bytimeabsolute or
 :bytimerelative value becomes the by-time, the :bymode becomes the by-mode
 value, and :bytrace sets the by-trace modifier. If the deliver-by extension is
-unavailable, the handling of reredirected message MUST conform
+unavailable, the handling of the redirected message MUST conform
 to the semantics specified in <a class='info' href='#RFC2852'>[RFC2852]<span> (</span><span class='info'>Newman, D., &ldquo;Deliver By SMTP Service Extension,&rdquo; June&nbsp;2000.</span><span>)</span></a> section 4.1.4 for
 relaying to a server that does not support the deliver-by SMTP extension.
 
 </p>
 <a name="mail-from-deliverby"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.7.1"></a><h3>7.1.&nbsp;
 MAIL FROM address selection</h3>
 
@@ -782,12 +860,14 @@ RFC 5228 does not require any particular envelope sender address be associated
 with redirected messages. However, the redirect-deliverby extension, like the
 redirect-dsn extension, isn't terribly useful if the place where any
 delivery status notifications are sent isn't
-known. Accordingly, when :bymode is specified and the envelope
+known. Accordingly, when either :bytimeabsolute or :bytimerelative is
+specified and the envelope
 sender address isn't empty, implementations MUST set the envelope sender
 address to the address of the sieve owner. 
 
 </p>
 <a name="redirect-deliverby-example"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.7.2"></a><h3>7.2.&nbsp;
 Example</h3>
 
@@ -822,6 +902,7 @@ if currentdate :value "lt"
 }
 </pre></div>
 <a name="security"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.8"></a><h3>8.&nbsp;
 Security Considerations</h3>
 
@@ -855,6 +936,7 @@ specification also apply to this extension.
 
 </p>
 <a name="IANA"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.9"></a><h3>9.&nbsp;
 IANA Considerations</h3>
 
@@ -901,10 +983,12 @@ extension specified in this document:
  given on http://www.iana.org/assignments/sieve-extensions.
 </pre></div>
 <a name="rfc.references"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.10"></a><h3>10.&nbsp;
 References</h3>
 
 <a name="rfc.references1"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <h3>10.1.&nbsp;Normative references</h3>
 <table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="RFC2119">[RFC2119]</a></td>
@@ -926,15 +1010,21 @@ References</h3>
 </table>
 
 <a name="rfc.references2"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <h3>10.2.&nbsp;Informative references</h3>
 <table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="RFC3501">[RFC3501]</a></td>
 <td class="author-text">Crispin, M., &ldquo;<a href="http://tools.ietf.org/html/rfc3501">INTERNET MESSAGE ACCESS PROTOCOL - VERSION 4rev1</a>,&rdquo; RFC&nbsp;3501, March&nbsp;2003 (<a href="http://www.rfc-editor.org/rfc/rfc3501.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC3894">[RFC3894]</a></td>
 <td class="author-text">Degener, J., &ldquo;<a href="http://tools.ietf.org/html/rfc3894">Sieve Extension: Copying Without Side Effects</a>,&rdquo; RFC&nbsp;3894, October&nbsp;2004 (<a href="http://www.rfc-editor.org/rfc/rfc3894.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="RFC5229">[RFC5229]</a></td>
+<td class="author-text">Homme, K., &ldquo;<a href="http://tools.ietf.org/html/rfc5229">Sieve Email Filtering: Variables Extension</a>,&rdquo; RFC&nbsp;5229, January&nbsp;2008 (<a href="http://www.rfc-editor.org/rfc/rfc5229.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="RFC5270">[RFC5270]</a></td>
+<td class="author-text">Jang, H., Jee, J., Han, Y., Park, S., and J. Cha, &ldquo;<a href="http://tools.ietf.org/html/rfc5270">Mobile IPv6 Fast Handovers over IEEE 802.16e Networks</a>,&rdquo; RFC&nbsp;5270, June&nbsp;2008 (<a href="http://www.rfc-editor.org/rfc/rfc5270.txt">TXT</a>).</td></tr>
 </table>
 
 <a name="anchor4"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.A"></a><h3>Appendix A.&nbsp;
 Acknowledgements</h3>
 
@@ -946,6 +1036,7 @@ suggestions and corrections.
 
 </p>
 <a name="rfc.authors"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <h3>Author's Address</h3>
 <table width="99%" border="0" cellpadding="0" cellspacing="0">
 <tr><td class="author-text">&nbsp;</td>
@@ -958,8 +1049,6 @@ suggestions and corrections.
 <td class="author-text">Monrovia, CA  91016-6347</td></tr>
 <tr><td class="author-text">&nbsp;</td>
 <td class="author-text">USA</td></tr>
-<tr><td class="author" align="right">Phone:&nbsp;</td>
-<td class="author-text">+1 909 457 4293</td></tr>
 <tr><td class="author" align="right">Email:&nbsp;</td>
 <td class="author-text"><a href="mailto:ned.freed@mrochek.com">ned.freed@mrochek.com</a></td></tr>
 </table>
